fdo#73536 getIdentifier cannot be used

OOXMLFastTokenHandler uses a Boost tokenmap, but tokenmaps cannot be
indexed by an integer. I've removed the #if 0 code and replaced it
with a SAL_WARN - nobody should use the functions getIdentier or
getUTF8Identifier!

Change-Id: Ia4c3589d289eac3022f0ee6aeef8662286d64f36